syntax = "proto3";

package MMORPG.Proto.Character;

message WalkStateSyncData {
    int32 state_id = 1;
}
